CSS issuses regarding glitching and mobile not showing backgourrnd in proper way solved

--- a/src/app/components/head-section/head-section.component.scss
+++ b/src/app/components/head-section/head-section.component.scss
@@ -6,16 +6,18 @@ header{
     position: relative;
     width: 100%;
     height: 30rem;
-    perspective: 0px;
+    // perspective: 0px;
     // overflow: hidden;
 
     color: white;
-    perspective-origin: 80%;
-    perspective: -5px;
+    transform-style: preserve-3d;
+    perspective-origin: top center;
+    perspective: 4px;
     overflow: hidden;
 }
 .first-plan{
-    transform: translateZ(3px);
+    // transform: translateZ(3px);
+    z-index: 400;
     font-family: 'Work Sans', sans-serif;
     padding: 20px;
     border-radius: 10px;
@@ -33,14 +35,17 @@ header{
     }
 }
 .second-plan{
-    background-size: cover;
+    // background-size: cover;
+    background-size: contain;
     background-attachment: fixed;
     background-position: center bottom;
+    background-position: center top;
     position: absolute;
     top:0;
     left: 0;
     width: 100%;
     height: 100%;
+    height: 35rem;
     transform: translateZ(-1px) scale(1.5);
     transition: 0.6s;
 }
